# ai-genai-image-generation

./: .gitignore  README.md  pyproject.toml
src/ai_genai_image_generation/: main.py
src/ai_genai_image_generation/autoencoder/: auto_encoder.py  variable_auto_encoder.py
src/ai_genai_image_generation/conditional/: cvae.py
src/ai_genai_image_generation/diffusion/: forward_diffusion.py
src/ai_genai_image_generation/gan/: wgan.py
